remove fixed position on mobile header

--- a/src/App.scss
+++ b/src/App.scss
@@ -42,10 +42,10 @@
   }
 
   &__header {
-    position: fixed;
+    /*     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
+    right: 0; */
     background-color: rgb(1, 1, 1, 0.7);
 
     @include desktop {
