--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,7 +4,7 @@
 @use "../../styles/partials/variables" as *;
 
 .home {
-  margin-top: 9.5rem;
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   width: 100%;
